# FC3-admin-catalogo-de-videos-python

./: .gitignore  .pdm.toml  .pylintrc  Dockerfile  README.md  api.http  docker-compose.override.yaml.example  docker-compose.yaml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: entrypoint.sh  start-app.sh
.docker/zsh/powerlevel10k/: .p10k.zsh
envs/: .env.e2e.example  .env.example  .env.test.example
src/__seedwork/application/: dto.py
src/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/__seedwork/tests/integration/domain/: test_init_validators.py
src/__seedwork/tests/unit/application/: test_unit_dto.py  test_unit_use_cases.py
src/__seedwork/tests/unit/domain/: test_unit_repositories.py  test_unit_validators.py  test_unit_value_objects.py
src/category/domain/: entities.py  repositories.py  validators.py
src/category/infra/: repositories.py
src/category/tests/integration/domain/: test_int_entities.py
src/category/tests/unit/domain/: test_unit_entities.py
src/category/tests/unit/infra/: test_unit_repositories.py
src/core/: .pdm.toml  conftest.py  pyproject.toml  pytest_plugin.py
src/core/__seedwork/application/: dto.py  use_cases.py
src/core/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/core/__seedwork/infra/django_app/: exception_handler.py  serializers.py
src/core/__seedwork/infra/testing/: helpers.py
src/core/__seedwork/tests/integration/: test_int_migrations.py
src/core/__seedwork/tests/integration/domain/: test_init_validators.py
src/core/__seedwork/tests/unit/application/: test_unit_dto.py  test_unit_use_cases.py
src/core/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validators.py  test_unit_value_objects.py
src/core/__seedwork/tests/unit/infra/django_app/: test_unit_serializers.py
src/core/category/application/: dto.py  use_cases.py
src/core/category/domain/: entities.py  entities_faker_builder.py  repositories.py  validators.py
src/core/category/infra/django/: api.py  apps.py  models.py  urls.py
src/core/category/infra/django/migrations/: 0001_initial.py
src/core/category/infra/django_app/: admin.py  api.py  apps.py  mappers.py  models.py  repositories.py  serializers.py  tests.py  urls.py
src/core/category/infra/django_app/migrations/: 0001_initial.py
src/core/category/infra/in_memory/: repositories.py
src/core/category/tests/: helpers.py
src/core/category/tests/e2e/categories/: test_e2e_delete.py  test_e2e_get.py  test_e2e_get_object.py  test_e2e_post.py  test_e2e_put.py
src/core/category/tests/fixture/: categories_api_fixture.py
src/core/category/tests/integration/application/: test_int_use_cases.py
src/core/category/tests/integration/domain/: test_int_entities.py
src/core/category/tests/integration/infra/django_app/: test_int_mappers.py  test_int_models.py  test_int_repositories.py
src/core/category/tests/integration/infra/django_app/api/: test_int_common_methods.py  test_int_delete.py  test_int_get.py  test_int_get_object.py  test_int_post.py  test_int_put.py
src/core/category/tests/unit/application/: test_unit_dto.py  test_unit_use_cases.py
src/core/category/tests/unit/domain/: test_unit_entities.py  test_unit_entities_faker_builder.py  test_unit_validators.py
src/core/category/tests/unit/infra/: test_unit_repositories.py
src/core/category/tests/unit/infra/django/: test_unit_api.py
src/core/category/tests/unit/infra/django_app/: test_unit_api.py
src/core/category/tests/unit/infra/in_memory/: test_unit_repositories.py
src/django_app/: .pdm.toml  __init__.py  config.py  container.py  manage.py  pyproject.toml  settings.py  urls.py
src/django_app/django_app/: settings.py  urls.py
src/django_app/settings/: __init__.py  __settings.py  rest_framework.py  testing.py
