[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Luiz Carlos", email = "argentinaluiz@gmail.com"},
]
dependencies = [
    "django>=4.0.4",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "djangorestframework>=3.13.1"
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
