[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Luiz Carlos", email = "argentinaluiz@gmail.com"},
]
dependencies = [
    "django>=4.0.4",
    "djangorestframework>=3.13.1",
    "django-extensions>=3.1.5",
    "dependency-injector>=4.39.1",
    "pydantic>=1.10.7",
    "dj-database-url>=1.3.0",
    "python-dotenv>=1.0.0"
]

requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=1.6.0",
    "pylint>=2.13.0",
    "pytest>=7.1.1",
    "pytest-cov>=3.0.0",
    "pytest-django>=4.5.2",
    "model-bakery>=1.6.0",
    "faker>=15.0.0",
]
[tool.pdm.scripts]
manage="python ./src/django_app/manage.py"
pep8 = "autopep8 --in-place --recursive ./src"
pylint = "pylint ./src"
runserver = "pdm run manage runserver 0.0.0.0:8000"
test = "pytest --ignore __pypackages__"
test_cov = "pdm run test --cov ./src --cov-fail-under 80"
test_cov_html = "pdm run test_cov --cov-report html:./__coverage"
test_e2e = "pdm run test --group e2e"
[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
