[project]
name = "django_app"
version = "0.0.1"
description = ""
authors = [
    {name = "Luiz Carlos", email = "argentinaluiz@gmail.com"},
]
dependencies = [
    "django>=4.0.4",
    "-e file:///home/python/app/src/core#egg=core",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
